--- a/style-index.css
+++ b/style-index.css
@@ -1,13 +1,14 @@
 body {
         margin: 0 auto;
         padding: 0;
+        height: 100%;
         background-color: #201D1D;
         font-family: Cambria, "Times New Roman", serif;
         font-size: 100%;
         color: white;
 }
 
-    ul {
+    .menu {
         margin: 0;
         padding: 0;
         position: fixed;
@@ -16,10 +17,10 @@ body {
         width: 100%;
         top: 0;
         z-index: 3;
-        background-color: #201D1D;
+        background-color: #1a1a1a;
     }
 
-    ul a {
+    .menu a {
         float: left;
         display: block;
         color: white;
@@ -33,17 +34,17 @@ body {
             float: right;
         }
 
-    ul a:hover {
+    .menu a:hover {
         background: #111;
         color: red;
     }
 
     .main {
-        margin-top: 4.5%;
+        width: auto;
+        margin-top: 5.5%;
         position: absolute;
         overflow: hidden;
         text-align: center;
-        width: auto;
         z-index: 1;
     }
 
@@ -55,10 +56,8 @@ body {
         top: 0;
         right: 0;
         position: absolute;
-        min-height: 50%;
-        height: 100%;
-        min-width: 15%;
-        max-width: 100%;
+        height: 42.7%;
+        width: 15%;
         z-index: 2;
     }
 
@@ -73,10 +72,8 @@ body {
         top: 0;
         left: 0;
         position: absolute;
-        min-height: 50%;
-        height: 100%;
-        min-width: 15%;
-        max-width: 100%;
+        height: 42.7%;
+        width: 15%;
         z-index: 2;
     }
 
@@ -91,7 +88,6 @@ body {
         width: 50%;
         max-width: 80%;
         opacity: 0.7;
-        image-resolution: initial;
     }
 
     .image-intro:hover {
@@ -104,15 +100,45 @@ body {
         font-weight: bold;
     }
 
-    .text-paragraphes {
+    .text-intro {
         position: relative;
-        text-align: left;
-        margin: auto;
+        text-align: center;
+        margin: auto auto 5%;
         font-size: 115%;
         font-weight: initial;
         letter-spacing: 1px;
         line-height: 150%;
-        max-width: 60%;
+        max-width: 70%;
+    }
+
+    .description-container {
+        width: auto;
+        overflow: auto;
+        position: relative;
+        text-align: left;
+        margin-left: 10%;
+        font-size: 125%;
+        line-height: 150%;
+    }
+
+    .description-container iframe {
+        position: relative;
+        float: left;
+    }
+
+    p a {
+        text-decoration: none;
+        color: red;
+        font-weight: bolder;
+    }
+
+    iframe {
+        margin-bottom: 5%;
+        margin-right: 5%;
+        position: relative;
+        height: 400px;
+        width: 550px;
+        border: none;
     }
 
     .big-container-footer {
