--- a/style-index.css
+++ b/style-index.css
@@ -55,8 +55,10 @@ body {
         background-position: 57%;
         top: 0;
         right: 0;
+        margin-bottom: auto;
         position: absolute;
-        height: 42.7%;
+        height: 25%;
+        max-height: 42.7%;
         width: 15%;
         z-index: 2;
     }
@@ -71,8 +73,10 @@ body {
         background-size: cover;
         top: 0;
         left: 0;
+        margin-bottom: auto;
         position: absolute;
-        height: 42.7%;
+        height: 25%;
+        max-height: 42.7%;
         width: 15%;
         z-index: 2;
     }
@@ -87,6 +91,7 @@ body {
         min-width: 10%;
         width: 50%;
         max-width: 80%;
+        max-height: 42.7%;
         opacity: 0.7;
     }
 
@@ -96,14 +101,16 @@ body {
 
     h1, h2, h3, h4 {
         position: relative;
-        text-align: inherit;
+        margin-bottom: 5%;
+        margin-top: 5%;
+        text-align: center;
         font-weight: bold;
     }
 
-    .text-intro {
+    .description {
         position: relative;
-        text-align: center;
-        margin: auto auto 5%;
+        text-align: left;
+        margin-left: 17%;
         font-size: 115%;
         font-weight: initial;
         letter-spacing: 1px;
@@ -111,24 +118,58 @@ body {
         max-width: 70%;
     }
 
-    .description-container {
+    .updates {
         width: auto;
+        height: auto;
         overflow: auto;
         position: relative;
         text-align: left;
-        margin-left: 10%;
+        margin-left: 5%;
         font-size: 125%;
         line-height: 150%;
     }
 
-    .description-container iframe {
+    .updates iframe {
+        margin-left: 2.5%;
         position: relative;
         float: left;
     }
 
-    p a {
+    .covid-container {
+        width: auto;
+        overflow: auto;
+        position: relative;
+        text-align: left;
+        margin: 5% 5% 5% 10%;
+        font-size: 125%;
+        line-height: 150%;
+    }
+
+    .covid-container img {
+        width: 35%;
+        height: 25%;
+        margin-right: 2.5%;
+        margin-bottom: 5%;
+        overflow: auto;
+        position: relative;
+        float: right;
+        border: 2px black;
+        opacity: 0.7;
+    }
+
+    .covid-container img:hover {
+        opacity: 0.45;
+    }
+
+    .lien-textuel {
         text-decoration: none;
         color: red;
+        font-weight: bolder;
+    }
+
+    .lien-textuel-mail {
+        text-decoration: none;
+        color: yellow;
         font-weight: bolder;
     }
 
@@ -141,16 +182,27 @@ body {
         border: none;
     }
 
-    .big-container-footer {
-        bottom: 0;
+    footer {
+        margin: 0;
+        padding: 0;
         width: 100%;
-        height: 5%;
         overflow: hidden;
-        position: absolute;
+        position: relative;
         background-color: #0d0c0c;
     }
 
-    .footer {
-        color: white;
+    footer li {
+        position: inherit;
         list-style-type: none;
+        padding: 1.5625% 3%;
+        display: block;
+        float: left;
+        text-align: center;
+        color: white;
+        font-weight: bolder;
+    }
+
+    footer a {
+        text-decoration: none;
+        color: blue;
     }
