--- a/style-formulaire.css
+++ b/style-formulaire.css
@@ -1,82 +1,204 @@
 body {
     margin: 0 auto;
     padding: 0;
-    text-align: center;
     font-family: Cambria, "Times New Roman", serif;
-    background-color: #0d0c0c;
+    background-color: #201d1d;
     font-size: 100%;
     color: white;
 }
+.menu {
+    z-index: 3;
+    position: fixed;
+    top: 0;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    list-style-type: none;
+    overflow: hidden;
+    background-color: #1a1a1a;
+}
 
-    ul {
-        margin: 0;
-        padding: 0;
-        position: fixed;
-        list-style-type: none;
-        overflow: hidden;
-        width: 100%;
-        top: 0;
-        z-index: 3;
-        background-color: #201D1D;
-    }
+.menu a {
+    float: left;
+    display: block;
+    padding: 1.5625% 2%;
+    color: white;
+    overflow: hidden;
+    text-align: center;
+    text-decoration: none;
+}
 
-    ul a {
-        float: left;
-        display: block;
-        color: white;
-        overflow: hidden;
-        text-align: center;
-        padding: 1.5625% 2%;
-        text-decoration: none;
-    }
+a.logo {
+    float: right;
+}
 
-    a.logo {
-        float: right;
-    }
+.menu a:hover {
+    background: #111;
+    color: red;
+}
 
-    ul a:hover {
-        background: #111;
-        color: red;
-    }
+.main {
+    position: absolute;
+    z-index: 1;
+    width: 100%;
+    margin-top: 5%;
+    overflow: hidden;
+    text-align: left;
+}
 
-    .main {
-        margin-top: 4.5%;
-        background-color: #201D1D;
-        position: absolute;
-        overflow: hidden;
-        width: auto;
-        z-index: 2;
-    }
-        .image-intro {
-            position: relative;
-            margin-bottom: 25px;
-            min-width: 10%;
-            width: 50%;
-            max-width: 80%;
-            opacity: 0.7;
-            image-resolution: initial;
-        }
+.right-bg {
+    position: absolute;
+    z-index: 2;
+    top: 0;
+    right: 0;
+    height: 100%;
+    width: 10%;
+    margin-bottom: auto;
+    background: #0d0c0c;
+}
 
-        .image-intro:hover {
-            opacity: 0.45;
-        }
+.left-bg {
+    position: absolute;
+    z-index: 2;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 10%;
+    margin-bottom: auto;
+    background: #0d0c0c;
+}
 
-        h1, h2, h3, h4 {
-            position: relative;
-            text-align: inherit;
-            font-weight: bold;
-        }
+.image-intro {
+    position: relative;
+    min-width: 10%;
+    width: 50%;
+    max-width: 80%;
+    max-height: 42.7%;
+    margin-bottom: 25px;
+    margin-left: 25%;
+    opacity: 0.7;
+}
 
-    .big-container-footer {
-        bottom: 0;
-        width: 100%;
-        height: 5%;
-        overflow: hidden;
-        position: absolute;
-        background-color: #0d0c0c;
-    }
+.image-intro:hover {
+    opacity: 0.45;
+}
 
-    .footer {
-        color: white;
-        list-style-type: none;
-    }
+h1, h2, h3, h4 {
+    position: relative;
+    margin-bottom: 5%;
+    margin-top: 5%;
+    text-align: center;
+    font-weight: bold;
+    font-size: 140%;
+}
+
+.image-description {
+    float: right;
+    position: relative;
+    width: 15%;
+    margin: -2% 10% 5% 5%;
+    overflow: hidden;
+}
+
+.image-description:hover {
+    opacity: 0.45;
+}
+
+.description {
+    position: relative;
+    max-width: 70%;
+    margin-left: 17%;
+    text-align: left;
+    font-size: 115%;
+    font-weight: initial;
+    letter-spacing: 1px;
+    line-height: 150%;
+}
+
+form {
+    position: relative;
+    margin-left: 30%;
+    text-align: inherit;
+}
+
+input[type=text] {
+    display: inline-block;
+    width: 20%;
+    margin: 1% 1%;
+    padding: 0.3%;
+    text-align: left;
+    border: 1px solid white;
+    border-radius: 5px;
+    color: white;
+    background-color: #0d0c0c;
+}
+
+input[type=date] {
+    display: inline-block;
+    width: 20%;
+    margin: 1% 1%;
+    padding: 0.3%;
+    border: 1px solid white;
+    border-radius: 5px;
+    background-color: #0d0c0c;
+    color: white;
+}
+
+select {
+    margin: 1% 1%;
+}
+
+textarea {
+    position: inherit;
+    margin: 1% 0;
+    color: white;
+    border: 1px solid white;
+    background-color: #0d0c0c;
+}
+
+
+input[type=submit] {
+    width: 10%;
+    margin: 1%;
+    padding: 1%;
+    border: none;
+    border-radius: 4px;
+    background-color: #4CAF50;
+    color: white;
+    cursor: pointer;
+    box-sizing: border-box;
+}
+
+span {
+    position: relative;
+    width: 100%;
+    height: 15%;
+    margin: 5% 5% 10% 20%;
+    font-size: 115%;
+}
+
+footer {
+    position: relative;
+    z-index: 2;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #1a1a1a;
+}
+
+footer li {
+    display: block;
+    float: left;
+    padding: 1.5625% 3%;
+    list-style-type: none;
+    text-align: center;
+    color: white;
+    font-weight: bolder;
+}
+
+footer a {
+    color: white;
+}
