--- a/style-index.css
+++ b/style-index.css
@@ -49,40 +49,25 @@ a.logo {
 }
 
 .right-bg {
-    position: absolute;
-    background-position: 57%;
+    position: fixed;
     z-index: 2;
     top: 0;
     right: 0;
-    height: 25%;
-    max-height: 42.7%;
-    width: 15%;
+    height: 100%;
+    width: 10%;
     margin-bottom: auto;
-    background-image: url("https://i.pinimg.com/originals/8b/e3/a3/8be3a3c410c4f6373c4cd1974b592fed.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.right-bg:hover {
-    opacity: 0.45;
+    background: #0d0c0c;
 }
 
 .left-bg {
-    position: absolute;
+    position: fixed;
     z-index: 2;
     top: 0;
     left: 0;
-    height: 25%;
-    max-height: 42.7%;
-    width: 15%;
+    height: 100%;
+    width: 10%;
     margin-bottom: auto;
-    background-image: url("https://static3.bigstockphoto.com/0/9/1/large1500/190563625.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.left-bg:hover {
-    opacity: 0.45;
+    background: #0d0c0c;
 }
 
 .image-intro {
@@ -101,47 +86,47 @@ a.logo {
 
 h1, h2, h3, h4 {
     position: relative;
-    margin-bottom: 5%;
-    margin-top: 5%;
+    width: 100%;
+    margin: 5% 0;
     text-align: center;
+    font-size: 140%;
     font-weight: bold;
 }
 
 .description {
     position: relative;
-    max-width: 70%;
-    margin-left: 17%;
+    max-width: 60%;
+    margin-left: 20%;
     text-align: left;
     font-size: 115%;
-    font-weight: initial;
-    letter-spacing: 1px;
+    font-weight: lighter;
     line-height: 150%;
 }
 
 .updates {
     position: relative;
-    width: auto;
+    width: 60%;
     height: auto;
-    margin-left: 5%;
+    margin-left: 20%;
     overflow: auto;
     text-align: left;
-    font-size: 125%;
+    font-size: 115%;
     line-height: 150%;
 }
 
 .updates iframe {
     position: relative;
     float: left;
-    margin-left: 2.5%;
 }
 
 .covid-container {
     position: relative;
-    width: auto;
-    margin: 5% 5% 5% 10%;
+    width: 60%;
+    margin-left: 20%;
+    margin-bottom: 5%;
     overflow: auto;
     text-align: left;
-    font-size: 125%;
+    font-size: 115%;
     line-height: 150%;
 }
 
@@ -150,8 +135,8 @@ h1, h2, h3, h4 {
     float: right;
     width: 35%;
     height: 25%;
-    margin-right: 2.5%;
     margin-bottom: 5%;
+    margin-left: 5%;
     overflow: auto;
     border: 2px black;
     opacity: 0.7;
@@ -184,11 +169,12 @@ iframe {
 
 footer {
     position: relative;
+    z-index: 2;
     width: 100%;
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #0d0c0c;
+    background-color: #1a1a1a;
 }
 
 footer li {
@@ -203,6 +189,5 @@ footer li {
 }
 
 footer a {
-    text-decoration: none;
-    color: blue;
+    color: white;
 }
