--- a/style-formulaire.css
+++ b/style-formulaire.css
@@ -6,6 +6,7 @@ body {
     font-size: 100%;
     color: white;
 }
+
 .menu {
     z-index: 3;
     position: fixed;
@@ -89,6 +90,7 @@ h1, h2, h3, h4 {
     text-align: center;
     font-weight: bold;
     font-size: 140%;
+    font-family: "Candara Light", Cambria, serif;
 }
 
 .image-description {
@@ -114,10 +116,25 @@ h1, h2, h3, h4 {
     line-height: 150%;
 }
 
+.form-titre {
+    position: relative;
+    font-style: italic;
+}
+
 form {
     position: relative;
     margin-left: 30%;
     text-align: inherit;
+}
+
+form img {
+    float: right;
+    position: relative;
+    width: 40%;
+    height: 30%;
+    margin: 0 5%;
+    overflow: auto;
+
 }
 
 input[type=text] {
@@ -182,7 +199,7 @@ footer {
     bottom: 0;
     left: 0;
     width: 100%;
-    margin: 0;
+    margin-top: 2.5%;
     padding: 0;
     overflow: hidden;
     background-color: #1a1a1a;
@@ -196,6 +213,7 @@ footer li {
     text-align: center;
     color: white;
     font-weight: bolder;
+    font-size: small;
 }
 
 footer a {
