--- a/style-about-us.css
+++ b/style-about-us.css
@@ -32,6 +32,7 @@ body {
 
 a.logo {
     float: right;
+    margin: 0 auto;
 }
 
 .menu a:hover {
@@ -40,12 +41,14 @@ a.logo {
 }
 
 .main {
-    position: absolute;
+    position: relative;
     z-index: 1;
     width: auto;
     margin-top: 5.5%;
     overflow: hidden;
     text-align: center;
+    font-weight: initial;
+    letter-spacing: 1px;
 }
 
 .right-bg {
@@ -70,6 +73,10 @@ a.logo {
     background: #0d0c0c;
 }
 
+img:hover {
+    opacity: 0.45;
+}
+
 .image-intro {
     position: relative;
     min-width: 10%;
@@ -77,23 +84,29 @@ a.logo {
     max-width: 80%;
     max-height: 42.7%;
     margin-bottom: 25px;
-    opacity: 0.7;
-}
-
-.image-intro:hover {
-    opacity: 0.45;
 }
 
 h1, h2, h3, h4 {
     position: relative;
     width: 100%;
-    margin: 5% 0;
+    margin: 8% 0 5% 0;
     text-align: center;
     font-size: 140%;
     font-weight: bold;
+    font-family: "Candara Light", Cambria, serif;
 }
 
-.description {
+h2 {
+    margin: 8% 0 0 20%;
+    text-align: left;
+}
+
+h3 {
+    margin: 8% 0 5% 20%;
+    text-align: left;
+}
+
+.description-mission {
     position: relative;
     max-width: 60%;
     margin-left: 20%;
@@ -103,47 +116,13 @@ h1, h2, h3, h4 {
     line-height: 150%;
 }
 
-.updates {
-    position: relative;
-    width: 60%;
-    height: auto;
-    margin-left: 20%;
-    overflow: auto;
-    text-align: left;
-    font-size: 115%;
-    line-height: 150%;
-}
-
-.updates iframe {
-    position: relative;
-    float: left;
-}
-
-.covid-container {
-    position: relative;
-    width: 60%;
-    margin-left: 20%;
-    margin-bottom: 5%;
-    overflow: auto;
-    text-align: left;
-    font-size: 115%;
-    line-height: 150%;
-}
-
-.covid-container img {
-    position: relative;
+.image-description-right {
     float: right;
-    width: 35%;
-    height: 25%;
-    margin-bottom: 5%;
-    margin-left: 5%;
+    position: relative;
+    width: 50%;
+    height: 40%;
+    margin: -2% 5% 5% 5%;
     overflow: auto;
-    border: 2px black;
-    opacity: 0.7;
-}
-
-.covid-container img:hover {
-    opacity: 0.45;
 }
 
 .lien-textuel {
@@ -158,20 +137,19 @@ h1, h2, h3, h4 {
     font-weight: bolder;
 }
 
-iframe {
-    position: relative;
-    height: 400px;
-    width: 550px;
-    margin-bottom: 5%;
-    margin-right: 5%;
-    border: none;
+.remerciements {
+    width: 60%;
+    margin: 5% 0 5% 20%;
+    text-align: center;
+    font-size: large;
+    font-weight: bold;
 }
 
-/*footer {
+footer {
     position: relative;
-    z-index: 2;
+    z-index: 3;
     width: 100%;
-    margin: 0;
+    margin-top: 2.5%;
     padding: 0;
     overflow: hidden;
     background-color: #1a1a1a;
@@ -181,14 +159,14 @@ footer li {
     position: inherit;
     display: block;
     float: left;
-    padding: 1.5625% 3%;
+    padding: 1.5625% 1.5%;
     list-style-type: none;
     text-align: center;
     color: white;
     font-weight: bolder;
+    font-size: small;
 }
 
 footer a {
     color: white;
 }
- */
