--- a/style-contact-us.css
+++ b/style-contact-us.css
@@ -45,6 +45,8 @@ a.logo {
     margin-top: 5.5%;
     overflow: hidden;
     text-align: center;
+    font-weight: initial;
+    letter-spacing: 1px;
 }
 
 .right-bg {
@@ -179,6 +181,14 @@ iframe {
     margin-bottom: 5%;
     margin-right: 5%;
     border: none;
+}
+
+.remerciements {
+    width: 60%;
+    margin: 5% 0 5% 20%;
+    text-align: center;
+    font-size: large;
+    font-weight: bold;
 }
 
 footer {
