--- a/style-contact-us.css
+++ b/style-contact-us.css
@@ -192,7 +192,7 @@ iframe {
 }
 
 footer {
-    position: relative;
+    position: absolute;
     z-index: 3;
     width: 100%;
     margin-top: 2.5%;
