--- a/style-formulaire.css
+++ b/style-formulaire.css
@@ -200,10 +200,8 @@ span {
 }
 
 footer {
-    position: relative;
+    position: absolute;
     z-index: 3;
-    bottom: 0;
-    left: 0;
     width: 100%;
     margin-top: 2.5%;
     padding: 0;
