--- a/style-Commande.css
+++ b/style-Commande.css
@@ -1,17 +1,16 @@
 body {
     margin: 0 auto;
     padding: 0;
-    height: 100%;
-    background-color: #201d1d;
     font-family: Cambria, "Times New Roman", serif;
+    background-color: #201d1d;
     font-size: 100%;
     color: white;
 }
 
 .menu {
+    z-index: 3;
     position: fixed;
     top: 0;
-    z-index: 3;
     margin: 0;
     padding: 0;
     width: 100%;
@@ -32,7 +31,6 @@ body {
 
 a.logo {
     float: right;
-    margin: 0 auto;
 }
 
 .menu a:hover {
@@ -41,14 +39,11 @@ a.logo {
 }
 
 .main {
-    position: relative;
     z-index: 1;
-    width: auto;
-    margin-top: 5.5%;
+    width: 100%;
+    margin-top: 5%;
     overflow: hidden;
-    text-align: center;
-    font-weight: initial;
-    letter-spacing: 1px;
+    text-align: left;
 }
 
 .right-bg {
@@ -73,10 +68,6 @@ a.logo {
     background: #0d0c0c;
 }
 
-img:hover {
-    opacity: 0.45;
-}
-
 .image-intro {
     position: relative;
     min-width: 10%;
@@ -84,57 +75,124 @@ img:hover {
     max-width: 80%;
     max-height: 42.7%;
     margin-bottom: 25px;
+    margin-left: 25%;
+    opacity: 0.7;
+}
+
+img:hover {
+    opacity: 0.45;
 }
 
 h1, h2, h3, h4 {
     position: relative;
-    width: 100%;
-    margin: 8% 0 5% 0;
+    margin-bottom: 5%;
+    margin-top: 5%;
     text-align: center;
-    font-size: 140%;
     font-weight: bold;
+    font-size: 140%;
     font-family: "Candara Light", Cambria, serif;
 }
 
-h2 {
-    margin: 8% 0 0 20%;
-    text-align: left;
-}
-
-h3 {
-    margin: 8% 0 5% 20%;
-    text-align: left;
-}
-
-.description-mission {
+.description {
     position: relative;
-    max-width: 60%;
-    margin-left: 20%;
+    max-width: 70%;
+    margin-left: 17%;
     text-align: left;
     font-size: 115%;
-    font-weight: lighter;
+    font-weight: initial;
+    letter-spacing: 1px;
     line-height: 150%;
 }
 
 .image-description-right {
     float: right;
     position: relative;
-    width: 50%;
-    height: 40%;
-    margin: -2% 5% 5% 5%;
+    width: 15%;
+    margin: -2% 10% 5% 5%;
+    overflow: hidden;
+}
+
+.form-titre {
+    position: relative;
+    font-style: italic;
+}
+
+form {
+    position: relative;
+    width: 60%;
+    margin-left: 30%;
+    text-align: inherit;
+    font-weight: initial;
+    letter-spacing: 1px;
+}
+
+form img {
+    float: right;
+    position: relative;
+    width: 40%;
+    height: 30%;
+    margin: 0 5%;
     overflow: auto;
+
 }
 
-.lien-textuel {
-    text-decoration: none;
-    color: red;
-    font-weight: bolder;
+input[type=text] {
+    display: inline-block;
+    width: 20%;
+    margin: 1% 1%;
+    padding: 0.3%;
+    text-align: left;
+    border: 1px solid white;
+    border-radius: 5px;
+    color: white;
+    background-color: #0d0c0c;
 }
 
-.lien-textuel-mail {
-    text-decoration: none;
-    color: yellow;
-    font-weight: bolder;
+.erreur-champs {
+    color: orangered;
+}
+
+input[name=age] {
+    margin: 2% 0;
+}
+
+select {
+    margin-top: 1%;
+    margin-bottom: 2%;
+}
+
+textarea {
+    position: inherit;
+    margin: 1% 0;
+    color: white;
+    border: 1px solid white;
+    background-color: #0d0c0c;
+}
+
+
+input[type=submit] {
+    width: 10%;
+    margin: 1%;
+    padding: 1%;
+    border: none;
+    border-radius: 4px;
+    background-color: #4CAF50;
+    color: white;
+    cursor: pointer;
+    box-sizing: border-box;
+}
+
+input[type=submit] {
+    position: relative;
+    width: 20%;
+}
+
+span {
+    position: relative;
+    width: 100%;
+    height: 15%;
+    margin: 5% 5% 10% 20%;
+    font-size: 115%;
 }
 
 .remerciements {
@@ -159,7 +217,7 @@ footer li {
     position: inherit;
     display: block;
     float: left;
-    padding: 1.5625% 1.5%;
+    padding: 1.5625% 3%;
     list-style-type: none;
     text-align: center;
     color: white;
