--- a/style-Commande.css
+++ b/style-Commande.css
@@ -198,7 +198,7 @@ span {
     float: left;
     width: 30%;
     display: initial;
-    margin: 2% 0 1% 9%;
+    margin: 2% 0 0 9%;
     font-size: 100%;
     text-align: center;
 }
