--- a/style-main.css
+++ b/style-main.css
@@ -31,6 +31,30 @@ body {
     text-decoration: none;
 }
 
+.menu form {
+    float: left;
+    width: 35%;
+    display: block;
+    padding: 1.5625% 2%;
+    color: white;
+    overflow: hidden;
+    text-decoration: none;
+}
+
+input[type=submit] {
+    margin-left: 2%;
+    background-color: #4CAF50;
+    border: none;
+    border-radius: 4px;
+    color: white;
+    text-align: center;
+    cursor: pointer;
+}
+
+input[type=submit]:hover {
+    color: yellow;
+}
+
 a.logo {
     float: right;
     margin: 0 auto;
@@ -89,7 +113,7 @@ img:hover {
 
 h1, h2, h3, h4 {
     position: relative;
-    width: 100%;
+    width: 60%;
     margin: 8% 0 5% 0;
     text-align: center;
     font-size: 140%;
